Upload: se actualizan de flex a grid
Se termina el trabajo de desafio CSS.
Proximo a ser editado para mejorar la visual

--- a/index.html
+++ b/index.html
@@ -12,124 +12,91 @@
 <body>
     <div class="gridContainer">
         <header>
-            <h1>SISTEMA DE VENTAS</h1>
+            <h1>MI ECOMMERCE</h1>
         </header>
         <menu>
+            <h1>Categorias</h1>
             <div class="categorias cat1">
-                <h2>categoria 1</h2>
+                <h2>Limpieza</h2>
+                <h3>(16)</h3>
             </div>
             <div class="categorias cat2">
-                <h2>categoria 2</h2>
+                <h2>Luces Led</h2>
+                <h3>(11)</h3>
             </div>
             <div class="categorias cat3">
-                <h2>categoria 3</h2>
+                <h2>Discos Duros</h2>
+                <h3>(9)</h3>
             </div>
             <div class="categorias cat4">
-                <h2>categoria 4</h2>
+                <h2>Otros</h2>
+                <h3>(3)</h3>
             </div>
         </menu>
         <main>
-            <div class="cardContainer">
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+            <div class="card">
+                <div class="cardHeader">
+                    <img src="./assets/img/1.jpg" alt="Foto 1">
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+                <div class="cardBody">
+                    <h2>Limpia Pantallas</h2>
+                    <h3>$8.990</h3>
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+                <div class="cardFooter">
+                    <button>Comprar</button>
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+            </div>
+            <div class="card">
+                <div class="cardHeader">
+                    <img src="./assets/img/2.jpg" alt="Foto 1">
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+                <div class="cardBody">
+                    <h2>Philcd</h2>
+                    <h3>$12.990</h3>
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+                <div class="cardFooter">
+                    <button>Comprar</button>
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+            </div>
+            <div class="card">
+                <div class="cardHeader">
+                    <img src="./assets/img/3.jpeg" alt="Foto 1">
                 </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <img src="./assets/img/foto1.png" alt="Foto 1">
-                    </div>
-                    <div class="cardBody">
-                        <h2>Se Vende</h2>
-                        <h3>Valor</h3>
-                    </div>
-                    <div class="cardFooter">
-                        <button>Compra</button>
-                    </div>
+                <div class="cardBody">
+                    <h2>Screen Force</h2>
+                    <h3>$14.990</h3>
+                </div>
+                <div class="cardFooter">
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardHeader">
+                    <img src="./assets/img/4.jpg" alt="Foto 1">
+                </div>
+                <div class="cardBody">
+                    <h2>Parlante Portatil</h2>
+                    <h3>$14.990</h3>
+                </div>
+                <div class="cardFooter">
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardHeader">
+                    <img src="./assets/img/5.jpg" alt="Foto 1">
+                </div>
+                <div class="cardBody">
+                    <h2>Cleaning Solution</h2>
+                    <h3>$12.990</h3>
+                </div>
+                <div class="cardFooter">
+                    <button>Comprar</button>
                 </div>
             </div>
         </main>
         <footer>
-            pie de pagina
+            @MIECOMMERCE
         </footer>
     </div>
 </body>
